[tool.poetry]
name = "harmony_auth"
version = "0.0.0"
description = "Discord OAuth2 Implicit Grant Dependency for FastAPI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/williamhatcher/harmonyAuth"
authors = ["William Hatcher <william@hatcher.work>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
httpx = "^0.23.0"
python-dateutil = "^2.8.2"
redis = {version="^4.3.4", extras=["hiredis"]}

[tool.poetry.dev-dependencies]
types-redis = "^4.3.14"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = true


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
